derive/tests/ui/attr-invalid-name-values.stderr
error: Invalid attribute parameter(s): 'Xname'. Expected 'name, returns'
  --> $DIR/attr-invalid-name-values.rs:8:2
   |
8  |       /// Returns a protocol version
   |  _____^
9  | |     #[rpc(Xname = "protocolVersion")]
10 | |     fn protocol_version(&self) -> Result<String>;
   | |_________________________________________________^
